2005-10-05 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b13

 * Fix: phpBB2 people changed code a little. So patch didnt work.
	Made Docu updates also. G1.5.2 works now with phpBB2 from 2.0.6 - 2.0.17

2005-10-05 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b12

 * "Fix": Adjust layout of captionator.

 * Fix: Errormessage when nothing was entered in login.php never occured due to register globals.

 * Change: use of function to draw userlist in manage_users.php

 * Fix: Background of higlihted tab in config was broken.

2005-10-04 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b11

 * Change: Made "post" the default method for forms.

 * Change: A lot indentings and use of default forms.

2005-10-04 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b10

 * Fix: Urls in at least phpNuke 7.8 where generated wrong.

 * Fix: When "returnTo-Link" is off, you should still can go back to thumbnail view.

2005-10-03 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b9

 * Change: NOW use favicon.ico from gmc. :)

2005-09-29 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b8

 * Change: Rewrite of permission dialog code. MUCH simpler now.

 * Change: Removed a lot set*** permission methods as they were redundant.

 * Change: lots of indenting in classes/Album*.php

 * Fix: forgot one user_name_string() in classes/Album.php

2005-09-25 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b7

 * "Fix": breadcrumb in view_album was also showed if there is no content.

 * Fix: Bug #1299959. Title text in alt and title tag of image was not escaped.

 * Fix: Some HTML 4.01.

2005-09-25 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b6

 * Fix: Typo in function emailComments() caused link to album to be wrong.

2005-09-25 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b5

  * Fix: Bug #1235007
         html_wrap/stats.header.default does not contain a block to optionally
         include a stats.header.tpl file, unlike every other *.header.default file.
         
2005-09-25 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b4

 * Change: Removed function user_name_string from util.php.