@@ -1,3 +1,7 @@
+2005-10-05 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b14
+
+ * New: Better Support for Joomla!
+
 2005-10-05 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b13
 
  * Fix: phpBB2 people changed code a little. So patch didnt work.
